@@ -1,33 +1,34 @@
 package voltaic.api.network.util;
 
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
+import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.Direction;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.World;
 import voltaic.prefab.network.AbstractNetwork;
 import voltaic.prefab.tile.types.GenericRefreshingConnectTile;
-import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
-import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.entity.BlockEntity;
 
 public class AbstractNetworkFinder<C extends GenericRefreshingConnectTile<T, C, ?>, T, P> {
-	private final Level level;
+	private final World level;
 	private final BlockPos start;
 	private final AbstractNetwork<C, T, P, ?> net;
 	private final HashSet<C> iteratedTiles = new HashSet<>();
 	private final HashSet<BlockPos> toIgnore = new HashSet<>();
 
-	public AbstractNetworkFinder(Level world, BlockPos start, AbstractNetwork<C, T, P, ?> net, BlockPos... ignore) {
+	public AbstractNetworkFinder(World world, BlockPos start, AbstractNetwork<C, T, P, ?> net, BlockPos... ignore) {
 		level = world;
 		this.start = start;
 		this.net = net;
 		if (ignore.length > 0) {
-			toIgnore.addAll(List.of(ignore));
+			toIgnore.addAll(Arrays.asList(ignore));
 		}
 	}
 
 	private void loopAll(BlockPos location) {
-		BlockEntity curr = level.getBlockEntity(location);
+		TileEntity curr = level.getBlockEntity(location);
 		if (net.isConductor(curr, (C) curr)) {
 			iteratedTiles.add((C) curr);
 		}
@@ -36,7 +37,7 @@ public class AbstractNetworkFinder<C extends GenericRefreshingConnectTile<T, C, 
 			if(toIgnore.contains(relative) || !level.hasChunkAt(relative)) {
 				continue;
 			}
-			BlockEntity tileEntity = level.getBlockEntity(relative);
+			TileEntity tileEntity = level.getBlockEntity(relative);
 			if(iteratedTiles.contains(tileEntity) || !net.isConductor(tileEntity, (C) curr)) {
 				continue;
 			}
@@ -47,7 +48,7 @@ public class AbstractNetworkFinder<C extends GenericRefreshingConnectTile<T, C, 
 
 	private void loopAll(C cable) {
 		iteratedTiles.add(cable);
-		for (BlockEntity connection : cable.getConnectedCables()) {
+		for (TileEntity connection : cable.getConnectedCables()) {
 			if(connection == null) {
 				continue;
 			}
