@@ -1,11 +1,13 @@
 package voltaic.api.screen;
 
+import java.util.Arrays;
 import java.util.List;
 
-import com.mojang.blaze3d.vertex.PoseStack;
+import com.mojang.blaze3d.matrix.MatrixStack;
 
-import net.minecraft.client.gui.Font;
-import net.minecraft.util.FormattedCharSequence;
+import net.minecraft.client.gui.FontRenderer;
+import net.minecraft.client.gui.fonts.Font;
+import net.minecraft.util.IReorderingProcessor;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 
@@ -16,18 +18,18 @@ public interface IScreenWrapper {
 
 	double getGuiHeight();
 
-	Font getFontRenderer();
+	FontRenderer getFontRenderer();
 	
-	public void displayTooltips(PoseStack stack, List<? extends FormattedCharSequence> tooltips, int mouseX, int mouseY);
+	public void displayTooltips(MatrixStack stack, List<? extends IReorderingProcessor> tooltips, int mouseX, int mouseY);
 
-	public void displayTooltips(PoseStack stack, List<? extends FormattedCharSequence> lines, int x, int y, Font font);
+	public void displayTooltips(MatrixStack stack, List<? extends IReorderingProcessor> lines, int x, int y, Font font);
 	
-	default public void displayTooltip(PoseStack stack, FormattedCharSequence tooltip, int mouseX, int mouseY) {
-		displayTooltips(stack, List.of(tooltip), mouseX, mouseY);
+	default public void displayTooltip(MatrixStack stack, IReorderingProcessor tooltip, int mouseX, int mouseY) {
+		displayTooltips(stack, Arrays.asList(tooltip), mouseX, mouseY);
 	}
 
-	default public void displayTooltip(PoseStack stack, FormattedCharSequence line, int x, int y, Font font) {
-		displayTooltips(stack, List.of(line), x, y, font);
+	default public void displayTooltip(MatrixStack stack, IReorderingProcessor line, int x, int y, Font font) {
+		displayTooltips(stack, Arrays.asList(line), x, y, font);
 	}
 
 }
